# sipXsummary

./: Makefile.am  README.md  common.am  configure.ac  sipxsummary.spec.in
config-plugin/: Makefile.am  sipxplugin.beans.xml
config-plugin/plugin/: SummaryHook.html  SummaryHook.page  SummaryHook.properties  SummaryPage.html  SummaryPage.page  SummaryPage.properties
config-plugin/src/org/sipfoundry/sipxconfig/summary/: Summary.java
config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/: SummaryHook.java  SummaryPage.java
